# UMR-leo-rover

./: .gitignore  Dockerfile  docker-compose.yml  readme.md  run_mapping.sh  run_mapping_no_imu.sh
FlexCloud/config/: georeferencing.yaml  keyframe_interpolation.yaml
TEASER-plusplus/teaser/: CMakeLists.txt
ros2_dev/src/Localization-QN/: .gitignore  CMakeLists.txt  README.md  package.xml
ros2_dev/src/Localization-QN/config/: config.yaml  localization_rviz.rviz
ros2_dev/src/Localization-QN/include/: fast_lio_localization_qn.h  map_matcher.h  pose_pcd.hpp  utilities.hpp
ros2_dev/src/Localization-QN/launch/: run.launch.py  run.launch.xml
ros2_dev/src/Localization-QN/src/: localization_qn.cpp  main.cpp
ros2_dev/src/Quatro/: CMakeLists.txt  package.xml
ros2_dev/src/SAM-QN/: .gitignore  CMakeLists.txt  README.md  package.xml
ros2_dev/src/SAM-QN/config/: config.yaml
ros2_dev/src/SAM-QN/include/: fast_lio_sam_qn.hpp  loop_closure.hpp  pose_pcd.hpp  utilities.hpp
ros2_dev/src/SAM-QN/launch/: run.launch  run.launch.py
ros2_dev/src/SAM-QN/log/: latest_list
ros2_dev/src/SAM-QN/rviz/: lio_rviz.rviz  sam_rviz.rviz
ros2_dev/src/SAM-QN/src/: main.cpp
ros2_dev/src/leo_rover_mapping/: .gitignore  CMakeLists.txt  Dockerfile.base  Dockerfile.camera  Dockerfile.camera_python  Dockerfile.lidar  README.md  docker-compose-jaska.yaml  docker-compose-ros2.yaml  package.xml  requirements.txt  ros_entrypoint_camera.sh
ros2_dev/src/leo_rover_mapping/.github/workflows/: docker-build.yml
ros2_dev/src/leo_rover_mapping/config/: localization.yaml  mapping.yaml  mapping.yaml.v1  mapping.yaml.v2  unilidar_l2.yaml
ros2_dev/src/leo_rover_mapping/launch/: leo_mapping.py  localization.launch.py  mapping.launch.py  zed_camera_rviz.launch.py
ros2_dev/src/leo_rover_mapping/rviz/: sam.rviz
ros2_dev/src/leo_rover_mapping/scripts/: camera_test.py  data_exporter.py  laz_converter.py  record_svo2_zedx.py  record_svo2_zedx_with_xsens_xda.py  robot_description_remapper.py
ros2_dev/src/nano_gicp/: CMakeLists.txt  package.xml
ros2_dev/src/point_lio_ros2/config/: unilidar_l2.yaml
ros2_dev/src/point_lio_ros2/launch/: mapping_unilidar_l2.launch.py
scripts/: data_exporter_no_imu.py  data_exporter_test.py  internal_mapping_no_imu.sh  las_converter_test.py  laz_converter_no_imu.py  rosbag_exporter.py
scripts/testit/: conversion_test.py  gps_data_collector.py  odometry_data_collector.py
